--- a/Milestone1/module5/index.html
+++ b/Milestone1/module5/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MD. MARUF HASAN CHOWDHURY PORTFOLIO</title>
+    <link rel="stylesheet" href="style/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="font-open-sans">
+    <header>
+        <nav>
+            <div class="logo">
+                <h2>MA<span class="color-primary">R</span>UF</h2>
+            </div>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href=""><button>Hire me</button></a></li>
+            </ul>
+        </nav>
+        <section id="banar">
+            <div class="banar-content">
+                <h2>Hi I'm </h2>
+                   <h1>MD. MARUF HASAN CHOWDHURY</h1>
+                <p>Frontend Developer | Backend Developer | Full Stack Developer</p>
+                <div class="button-section">
+                    <button>Download Resume</button>
+                    <button>Contact</button>
+                </div>
+                
+            </div>
+            <div class="banar-image">
+                <img src="./images/julman.JPG" alt="banar image">
+            </div>
+
+
+        </section>
+
+
+
+
+
+    </header>
+    <main>
+
+
+
+    </main>
+    <footer>
+
+
+
+    </footer>
     
    
 
